...

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/popular_movie_txtv"
                        style="@style/DefaultFont"
                        android:layout_width="wrap_content"
...
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/popular_movie"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/popular_movie_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/popular_movie_rv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:contentDescription="@string/popular_movie_list_contentDesc"
                            android:padding="@dimen/padding_small"
                            android:visibility="@{homeViewModel.initialLoading ? View.GONE : View.VISIBLE}"
...

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/now_playing_movie_txtv"
                        style="@style/DefaultFont"
                        android:layout_width="wrap_content"
...

                    <LinearLayout
                        android:id="@+id/now_playing_movie_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/now_playing_movie_rv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:contentDescription="@string/now_playing_movie_list_contentDesc"
                            android:padding="@dimen/padding_small"
                            android:visibility="@{homeViewModel.initialLoading ? View.GONE : View.VISIBLE}"
...

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/popular_tv_txtv"
                        style="@style/DefaultFont"
                        android:layout_width="wrap_content"
...
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:text="@string/popular_tv_show"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/now_playing_movie_container" />
...

                    <LinearLayout
                        android:id="@+id/popular_tv_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/popular_tv_rv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:contentDescription="@string/popular_tv_show_list_contentDesc"
                            android:padding="@dimen/padding_small"
                            android:visibility="@{homeViewModel.initialLoading ? View.GONE : View.VISIBLE}"
...

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/on_air_tv_txtv"
                        style="@style/DefaultFont"
                        android:layout_width="wrap_content"
...

                    <LinearLayout
                        android:id="@+id/on_air_tv_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/on_air_popular_tv_rv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:contentDescription="@string/now_airing_tv_show_list_contentDesc"
                            android:padding="@dimen/padding_small"
                            android:visibility="@{homeViewModel.initialLoading ? View.GONE : View.VISIBLE}"
...
