...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroound"
        tools:context=".show.PopularMovieListFragment">

        <include
            android:id="@+id/error_layout"
            layout="@layout/try_again_load_list"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/show_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </androidx.constraintlayout.widget.ConstraintLayout>
...
